--- a/css/styler.css
+++ b/css/styler.css
@@ -231,7 +231,7 @@ figure {
       padding: 0 1em; } }
 
 #colorlib-hero {
-  height: 1200px;
+  min-height: 500px;
   background: #fff url(../images/loader.gif) no-repeat center center;
   width: 100%;
   float: left;
