--- a/css/styler.css
+++ b/css/styler.css
@@ -299,7 +299,7 @@ figure {
             }}
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1, #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
           
-          color: white;
+          color: black;
            }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
           margin-bottom: 20px;
