--- a/css/styler.css
+++ b/css/styler.css
@@ -305,7 +305,8 @@ figure {
           margin-bottom: 20px;
           font-size: 60px;
           line-height: 1.3;
-          font-weight: 700; }
+          font-weight: 700; 
+          color:black;}
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
               font-size: 28px;
@@ -316,7 +317,8 @@ figure {
           line-height: 1.5;
           margin-bottom: 30px;
           font-weight: 300;
-          font-family: "Quicksand", Arial, sans-serif; }
+          font-family: "Quicksand", Arial, sans-serif;
+          color:black;}
          @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
               font-size: 20px;
