--- a/css/styler.css
+++ b/css/styler.css
@@ -830,11 +830,11 @@ color: white; }
     .progress-bar.color-4 span {
       color: #a84cb8; }
   .progress-bar.color-5 {
-    background: #2fa499; }
+    background: #47eb15; }
     .progress-bar.color-5:after {
-      background: #2fa499; }
+      background: #47eb15; }
     .progress-bar.color-5 span {
-      color: #2fa499; }
+      color: #47eb15; }
   .progress-bar.color-6 {
     background: #4054b2; }
     .progress-bar.color-6:after {
