--- a/css/styler.css
+++ b/css/styler.css
@@ -77,6 +77,7 @@ figure {
   padding-bottom: 40px;
   float: left;
   width: 300px;
+  height: 100vh;
   position: fixed;
   overflow-y: scroll;
   z-index: 1001;
@@ -231,7 +232,7 @@ figure {
       padding: 0 1em; } }
 
 #colorlib-hero {
-  min-height: 200px;
+  height: 1200px;
   background: #fff url(../images/loader.gif) no-repeat center center;
   width: 100%;
   float: left;
@@ -291,39 +292,27 @@ figure {
         position: relative; }
         @media screen and (max-width: 768px) {
           #colorlib-hero .flexslider .slider-text > .slider-text-inner {
-            text-align: center; } }
-        @media screen and (max-width: 768px){
-         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1, #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
-          
-          color: white;
-            }}
+            text-align: left; } }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1, #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
-          
+          margin: 0;
+          padding: 0;
           color: black;
-           }
+          font-family: "Playfair Display", Georgia, serif; }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
           margin-bottom: 20px;
           font-size: 60px;
           line-height: 1.3;
-          font-weight: 700; 
-          color:black;}
+          font-weight: 700; }
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
               font-size: 28px;
-            color:white;
-            -webkit-text-stroke: 0.3px black;} }
+            color: white; } }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
           font-size: 18px;
           line-height: 1.5;
           margin-bottom: 30px;
           font-weight: 300;
-          font-family: "Quicksand", Arial, sans-serif;
-          color:black;}
-         @media screen and (max-width: 768px) {
-            #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
-              font-size: 20px;
-            color:white;
-           -webkit-text-stroke: 0.2px black;} }
+          font-family: "Quicksand", Arial, sans-serif; }
           #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 a {
             color: rgba(44, 152, 240, 0.8);
             border-bottom: 1px solid rgba(44, 152, 240, 0.7); }
@@ -338,7 +327,6 @@ figure {
           color: #fff; }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner p {
           margin-bottom: 0; }
-       
         #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
           font-size: 12px;
           text-transform: uppercase;
@@ -356,13 +344,7 @@ figure {
               border: 1px solid #000 !important; }
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
-              width: 100%; } }
-          @media screen and (max-width: 768px) {
-                #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn {
-                color: rgb(255, 255, 255);
-                border: 1px solid rgb(255, 255, 255);
-                background: transparent !important; }}
-
+              width: 50%; } }
 
 body.offcanvas {
   overflow-x: hidden; }
@@ -425,6 +407,14 @@ body.offcanvas {
   background-repeat: no-repeat;
   position: relative; }
 
+#colorlib-main > section.colorlib-blog > div > div.col-md-12 > div > div.col-md-4.animate-box > div{
+  transition: 0.3s ease-in-out
+}
+
+#colorlib-main > section.colorlib-blog > div > div.col-md-12 > div > div.col-md-4.animate-box > div:hover{
+  box-shadow: 0px 14px 28px rgba(0,0,0,0.9);
+  transition: 0.3s ease-in-out
+}
 .colorlib-heading {
   font-size: 18px;
   margin-bottom: 4em;
@@ -841,7 +831,7 @@ color: white; }
       background: #4054b2; }
     .progress-bar.color-6 span {
       color: #4054b2; }
-     .progress-bar.color-7 {
+      .progress-bar.color-7 {
         background: #f505b9; }
         .progress-bar.color-7:after {
           background: #f505b9; }
@@ -973,7 +963,7 @@ color: white; }
       color: #2c98f0; }
 
 .project {
-  background-size: 100% 100%;
+  background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   position: relative;
@@ -1056,12 +1046,10 @@ color: white; }
           font-style: 28px;
           -webkit-transform: translate3d(0, 0, 0);
           transform: translate3d(0, 0, 0);
-          color: white; 
-          -webkit-text-stroke: 0.1px black;}
+          color: #000; }
         .project .desc span {
           -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-          color:white} }
+          transform: translate3d(0, 0, 0); } }
   .project:hover .desc {
     opacity: 1; }
     .project:hover .desc h3 {
