--- a/css/styler.css
+++ b/css/styler.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @font-face {
   font-family: 'icomoon';
   src: url("../fonts/icomoon/icomoon.eot?srf3rx");
@@ -11,8 +12,11 @@
 *	Edit this section
 *
 * ======================================================= */
+*{
+   font-family: 'Montserrat', sans-serif;
+}
 body {
-  font-family: "Quicksand", Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   font-size: 15px;
   line-height: 1.8;
@@ -36,7 +40,7 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   color: #000;
-  font-family: "Playfair Display", Georgia, serif;
+  
   font-weight: 400;
   margin: 0 0 30px 0; }
 
@@ -50,7 +54,7 @@ figure {
     margin: 20px auto 0px auto;
     color: #b3b3b3;
     font-style: italic;
-    font-family: "Quicksand", Arial, sans-serif; }
+    }
     @media screen and (max-width: 480px) {
       figure figcaption {
         width: 100%; } }
@@ -93,7 +97,7 @@ figure {
       -ms-transform: translateX(-300px);
       -o-transform: translateX(-300px);
       transform: translateX(-300px);
-      padding-top: 4em; } }
+      padding-top: 2em; } }
   #colorlib-aside .author-img {
     width: 150px;
     height: 150px;
@@ -145,7 +149,7 @@ figure {
           text-decoration: none;
           position: relative;
           padding: 10px 0;
-          font-family: "Quicksand", Arial, sans-serif;
+ 
           -webkit-transition: 0.3s;
           -o-transition: 0.3s;
           transition: 0.3s; }
@@ -196,7 +200,7 @@ figure {
     width: 100%; }
     @media screen and (max-width: 768px) {
       #colorlib-aside .colorlib-footer {
-        position: relative;
+        position: fixed;
         bottom: 0; } }
     #colorlib-aside .colorlib-footer span {
       display: block; }
@@ -232,7 +236,7 @@ figure {
       padding: 0 1em; } }
 
 #colorlib-hero {
-  height: 1200px;
+  height: 100vh;
   background: #fff url(../images/loader.gif) no-repeat center center;
   width: 100%;
   float: left;
@@ -247,7 +251,8 @@ figure {
       overflow: visible; }
       #colorlib-hero .flexslider .slides li {
         background-repeat: no-repeat;
-        background-position: bottom center;
+        background-position: center;
+        height: 100vh;
         background-size: cover;
         position: relative; }
     #colorlib-hero .flexslider .flex-control-nav {
@@ -292,12 +297,14 @@ figure {
         position: relative; }
         @media screen and (max-width: 768px) {
           #colorlib-hero .flexslider .slider-text > .slider-text-inner {
-            text-align: left; } }
+            text-align: left;
+            padding-left: 10px;
+            padding-top: 100px } }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1, #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
           margin: 0;
           padding: 0;
           color: black;
-          font-family: "Playfair Display", Georgia, serif; }
+          }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
           margin-bottom: 20px;
           font-size: 60px;
@@ -306,13 +313,17 @@ figure {
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
               font-size: 28px;
+
             color: white; } }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
           font-size: 18px;
+      /*    -webkit-text-stroke-width:0.1px;
+          -webkit-text-stroke-color:black;*/
+          color: white;
           line-height: 1.5;
           margin-bottom: 30px;
-          font-weight: 300;
-          font-family: "Quicksand", Arial, sans-serif; }
+          font-weight: 600;
+        }
           #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 a {
             color: rgba(44, 152, 240, 0.8);
             border-bottom: 1px solid rgba(44, 152, 240, 0.7); }
@@ -338,13 +349,13 @@ figure {
           #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn {
             color: #000;
             border: 1px solid #000;
-            background: transparent !important; }
+            background-color: #2c98f0; }
             #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn:hover {
               background: rgba(44, 152, 240, 0.8) !important;
               border: 1px solid #000 !important; }
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
-              width: 50%; } }
+              width: 85%; } }
 
 body.offcanvas {
   overflow-x: hidden; }
@@ -360,11 +371,11 @@ body.offcanvas {
     position: fixed; }
   body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
     top: 0;
-    -moz-transform: translateX(300px);
+   /* -moz-transform: translateX(300px);
     -webkit-transform: translateX(300px);
     -ms-transform: translateX(300px);
     -o-transform: translateX(300px);
-    transform: translateX(300px); }
+    transform: translateX(300px);*/ }
 
 .colorlib-narrow-content {
   padding: 0 2.5em; }
@@ -473,7 +484,7 @@ color:white; }
   font-size: 14px;
   letter-spacing: 1px;
   text-transform: uppercase;
-  font-family: "Quicksand", Arial, sans-serif;
+  
   background-color: #2c98f0;
   color: #fff;
   position: relative;
@@ -614,7 +625,7 @@ color: #000; }
 
 .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 {
   font-size: 20px;
-  font-family: "Quicksand", Arial, sans-serif;
+  
   font-weight: 500; }
 
 .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 a {
@@ -646,7 +657,7 @@ color: #000; }
       font-size: 30px;
       color: #2c98f0; }
   .services h3 {
-    font-family: "Quicksand", Arial, sans-serif;
+   
     font-size: 16px;
     font-weight: 500;
   color: white; }
@@ -752,7 +763,7 @@ color: #000; }
 
 .progress-wrap h3 {
   font-size: 16px;
-  font-family: "Quicksand", Arial, sans-serif;
+
   margin-bottom: 10px;
 color: white; }
 
@@ -927,7 +938,7 @@ color: white; }
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 1px;
-    font-family: "Quicksand", Arial, sans-serif; }
+     }
     .blog-entry .desc h3 a {
       color: #000;
       text-decoration: none; }
@@ -1008,7 +1019,7 @@ color: white; }
           font-size: 16px;
           color: #333333; }
     .project .desc h3 {
-      font-family: "Quicksand", Arial, sans-serif;
+   
       font-size: 16px;
       font-weight: 500;
       text-transform: uppercase;
@@ -1040,8 +1051,8 @@ color: white; }
         color: #000; }
     @media screen and (max-width: 768px) {
       .project .desc {
-        opacity: 1;
-        background: rgba(0, 0, 0, 0.4); }
+     
+        background: rgba(0, 0, 0, 0.0); }
         .project .desc h3 {
           font-style: 28px;
           -webkit-transform: translate3d(0, 0, 0);
@@ -1104,7 +1115,7 @@ color: white; }
     font-size: 40px;
     display: block;
     color: white;
-    font-family: "Quicksand", Arial, sans-serif;
+  
     width: 100%;
     font-weight: 700;
     margin-bottom: .3em; }
@@ -1197,7 +1208,7 @@ color: white; }
 .btn {
   margin-right: 4px;
   margin-bottom: 4px;
-  font-family: "Quicksand", Arial, sans-serif;
+ 
   font-size: 12px;
   font-weight: 400;
   text-transform: uppercase;
@@ -1348,9 +1359,9 @@ color: white; }
   cursor: pointer;
   text-decoration: none; }
   .colorlib-nav-toggle.active i::before, .colorlib-nav-toggle.active i::after {
-    background: #000; }
+    background: white; }
   .colorlib-nav-toggle.dark.active i::before, .colorlib-nav-toggle.dark.active i::after {
-    background: #000; }
+    background: white; }
   .colorlib-nav-toggle:hover, .colorlib-nav-toggle:focus, .colorlib-nav-toggle:active {
     outline: none;
     border-bottom: none !important; }
@@ -1362,11 +1373,11 @@ color: white; }
     *display: inline;
     width: 30px;
     height: 2px;
-    color: #000;
+    color: white;
     font: bold 14px/.4 Helvetica;
     text-transform: uppercase;
     text-indent: -55px;
-    background: #000;
+    background: white;
     -webkit-transition: all .2s ease-out;
     -o-transition: all .2s ease-out;
     transition: all .2s ease-out; }
@@ -1374,7 +1385,7 @@ color: white; }
       content: '';
       width: 30px;
       height: 2px;
-      background: #000;
+      background: white;
       position: absolute;
       left: 0;
       -webkit-transition: 0.2s;
